Bug Fix #Error message not showing on mobile

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ tbody tr td:is(:nth-child(2), :nth-child(3), :nth-child(4)){
     }
     .main{
         box-sizing: border-box;
-        height: 290px;
+        height: 332px;
         padding-left: 10px;
     }
     .Name{
